# esp32_eth_wifi_bridge

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build_firmware.sh  build_firmware_w5500_c3.sh  index.html  sdkconfig.defaults  sdkconfig.defaults.w5500_c3
components/cmd_router/: CMakeLists.txt  cmd_router.c
components/eth_w5500/: CMakeLists.txt  esp_eth_mac_w5500.c  w5500_spi_driver.c
components/eth_w5500/include/: w5500_spi_driver.h
components/http_server/: CMakeLists.txt  favicon_png.h  http_server.c  pages.h
components/http_server/include/: http_server.h
components/http_server/pages/: page_config.h  page_index.h
components/mdns_responder/: CMakeLists.txt  mdns_responder.c  mdns_responder.h
components/pcap_capture/: pcap_capture.c
components/remote_console/: remote_console.c
components/remote_console/include/: remote_console.h
include/: router_config.h  router_globals.h  wifi_config.h
main/: CMakeLists.txt  Kconfig.projbuild  esp32_nat_router.c  netif_hooks.c
